<?php

namespace App\Livewire\Company\Profile;

use Livewire\Component;

class Location extends Component
{
    public function render()
    {
        return view('livewire.company.profile.location');
    }
}
