erDiagram
    users ||--o{ job_seekers : "has profile"
    users ||--o{ company_users : "has profile"
    users ||--o{ sessions : "has"
    users ||--o{ notifications : "receives"
    users ||--o{ password_reset_tokens : "requests"
    
    companies ||--o{ company_users : "has members"
    companies ||--o{ jobs : "posts"
    companies ||--o{ company_locations : "has"
    companies ||--o{ subscriptions : "has"
    
    company_users }o--|| roles : "has role"
    
    job_seekers ||--o{ experiences : "has"
    job_seekers ||--o{ educations : "has"
    job_seekers ||--o{ certifications : "has"
    job_seekers ||--o{ job_seeker_skills : "has"
    job_seekers ||--o{ documents : "uploads"
    job_seekers ||--o{ applications : "submits"
    job_seekers ||--o{ saved_jobs : "saves"
    job_seekers ||--o{ saved_searches : "creates"
    
    jobs ||--o{ applications : "receives"
    jobs ||--o{ saved_jobs : "saved by"
    jobs ||--o{ job_skills : "requires"
    jobs ||--o{ screening_questions : "has"
    jobs }o--|| job_categories : "belongs to"
    jobs }o--|| locations : "located in"
    jobs }o--|| company_users : "posted by"
    
    applications ||--o{ application_statuses : "has history"
    applications ||--o{ screening_answers : "has"
    applications ||--o{ application_reviews : "has"
    applications ||--o{ application_notes : "has"
    applications ||--o{ messages : "has"
    
    application_reviews }o--|| company_users : "reviewed by"
    application_notes }o--|| company_users : "created by"
    
    screening_questions ||--o{ screening_answers : "answered by"
    
    skills ||--o{ job_seeker_skills : "possessed by"
    skills ||--o{ job_skills : "required by"
    
    messages }o--|| users : "sent by"
    messages }o--|| users : "sent to"
    
    activity_logs }o--|| users : "performed by"
    
    users {
        bigint id PK
        string email UK
        string password
        enum user_type "job_seeker, company_user"
        timestamp email_verified_at
        string remember_token
        timestamps created_at_updated_at
        softDeletes deleted_at
    }
    
    job_seekers {
        bigint id PK
        bigint user_id FK
        string first_name
        string last_name
        string phone
        string profile_photo
        text bio
        string city
        string state
        string country
        decimal desired_salary
        enum availability "immediate, 2weeks, 1month, 3months"
        boolean open_to_remote
        boolean open_to_relocate
        string resume_path
        integer profile_completeness
        timestamps created_at_updated_at
    }
    
    companies {
        bigint id PK
        string name
        string slug UK
        string logo
        string website
        text description
        string industry
        enum size "1-10, 11-50, 51-200, 201-500, 501-1000, 1000+"
        string founded_year
        boolean verified
        timestamps created_at_updated_at
        softDeletes deleted_at
    }
    
    company_users {
        bigint id PK
        bigint user_id FK
        bigint company_id FK
        bigint role_id FK
        string first_name
        string last_name
        string job_title
        string phone
        boolean is_active
        timestamp last_login_at
        timestamps created_at_updated_at
    }
    
    roles {
        bigint id PK
        string name UK "admin, hiring_manager, viewer"
        text description
        json permissions
        timestamps created_at_updated_at
    }
    
    company_locations {
        bigint id PK
        bigint company_id FK
        string address_line1
        string address_line2
        string city
        string state
        string country
        string postal_code
        boolean is_headquarters
        timestamps created_at_updated_at
    }
    
    jobs {
        bigint id PK
        bigint company_id FK
        bigint posted_by FK "company_users.id"
        bigint category_id FK
        bigint location_id FK
        string title
        string slug UK
        text description
        text responsibilities
        text requirements
        text benefits
        enum job_type "full_time, part_time, contract, internship"
        enum experience_level "entry, mid, senior, lead, executive"
        decimal salary_min
        decimal salary_max
        string salary_currency
        enum salary_period "hourly, monthly, yearly"
        boolean remote_allowed
        enum status "draft, active, paused, closed, expired"
        integer views_count
        integer applications_count
        date application_deadline
        date published_at
        date closed_at
        timestamps created_at_updated_at
        softDeletes deleted_at
    }
    
    job_categories {
        bigint id PK
        string name UK
        string slug UK
        text description
        bigint parent_id FK "self-reference"
        integer order
        timestamps created_at_updated_at
    }
    
    locations {
        bigint id PK
        string city
        string state
        string country
        string country_code
        decimal latitude
        decimal longitude
        timestamps created_at_updated_at
    }
    
    applications {
        bigint id PK
        bigint job_id FK
        bigint job_seeker_id FK
        text cover_letter
        string resume_path
        json additional_documents
        enum current_status "submitted, reviewing, shortlisted, interview, offered, hired, rejected, withdrawn"
        integer rating "1-5 stars"
        boolean is_read
        timestamp read_at
        timestamps created_at_updated_at
    }
    
    application_statuses {
        bigint id PK
        bigint application_id FK
        enum status "submitted, reviewing, shortlisted, interview, offered, hired, rejected, withdrawn"
        bigint changed_by FK "company_users.id"
        text comment
        timestamp created_at
    }
    
    application_reviews {
        bigint id PK
        bigint application_id FK
        bigint reviewer_id FK "company_users.id"
        integer rating "1-5"
        text feedback
        enum recommendation "strongly_recommend, recommend, neutral, not_recommend"
        timestamps created_at_updated_at
    }
    
    application_notes {
        bigint id PK
        bigint application_id FK
        bigint created_by FK "company_users.id"
        text note
        boolean is_private
        timestamps created_at_updated_at
    }
    
    screening_questions {
        bigint id PK
        bigint job_id FK
        text question
        enum type "text, boolean, multiple_choice, number"
        json options "for multiple_choice"
        boolean is_required
        integer order
        timestamps created_at_updated_at
    }
    
    screening_answers {
        bigint id PK
        bigint application_id FK
        bigint question_id FK
        text answer
        timestamps created_at_updated_at
    }
    
    experiences {
        bigint id PK
        bigint job_seeker_id FK
        string job_title
        string company_name
        string location
        date start_date
        date end_date
        boolean is_current
        text description
        integer order
        timestamps created_at_updated_at
    }
    
    educations {
        bigint id PK
        bigint job_seeker_id FK
        string institution
        string degree
        string field_of_study
        date start_date
        date end_date
        text description
        integer order
        timestamps created_at_updated_at
    }
    
    certifications {
        bigint id PK
        bigint job_seeker_id FK
        string name
        string issuing_organization
        string credential_id
        date issue_date
        date expiry_date
        string credential_url
        timestamps created_at_updated_at
    }
    
    skills {
        bigint id PK
        string name UK
        string slug UK
        text description
        bigint parent_id FK "self-reference"
        timestamps created_at_updated_at
    }
    
    job_seeker_skills {
        bigint id PK
        bigint job_seeker_id FK
        bigint skill_id FK
        enum proficiency "beginner, intermediate, advanced, expert"
        integer years_experience
        timestamps created_at_updated_at
    }
    
    job_skills {
        bigint id PK
        bigint job_id FK
        bigint skill_id FK
        boolean is_required
        enum proficiency_required "beginner, intermediate, advanced, expert"
        timestamps created_at_updated_at
    }
    
    saved_jobs {
        bigint id PK
        bigint job_seeker_id FK
        bigint job_id FK
        text notes
        timestamps created_at_updated_at
    }
    
    saved_searches {
        bigint id PK
        bigint job_seeker_id FK
        string name
        json search_criteria
        boolean email_alerts
        enum alert_frequency "immediate, daily, weekly"
        timestamp last_run_at
        timestamps created_at_updated_at
    }
    
    documents {
        bigint id PK
        bigint job_seeker_id FK
        string name
        string file_path
        string file_type
        integer file_size
        enum document_type "resume, cover_letter, portfolio, certificate, other"
        timestamps created_at_updated_at
    }
    
    messages {
        bigint id PK
        bigint application_id FK
        bigint sender_id FK "users.id"
        bigint recipient_id FK "users.id"
        string subject
        text body
        boolean is_read
        timestamp read_at
        bigint parent_message_id FK "self-reference for threading"
        timestamps created_at_updated_at
    }
    
    notifications {
        bigint id PK
        bigint user_id FK
        string type
        json data
        timestamp read_at
        timestamp created_at
    }
    
    activity_logs {
        bigint id PK
        bigint user_id FK
        string action
        string model_type
        bigint model_id
        json properties
        string ip_address
        string user_agent
        timestamp created_at
    }
    
    sessions {
        string id PK
        bigint user_id FK
        string ip_address
        text user_agent
        text payload
        integer last_activity
    }
    
    password_reset_tokens {
        string email PK
        string token
        timestamp created_at
    }
    
    subscriptions {
        bigint id PK
        bigint company_id FK
        string stripe_customer_id
        string stripe_subscription_id
        enum plan "free, basic, professional, enterprise"
        enum status "active, cancelled, past_due, trialing"
        integer job_posting_limit
        integer team_member_limit
        decimal price
        date trial_ends_at
        date current_period_start
        date current_period_end
        timestamps created_at_updated_at
    }